# tmux-agent-comms

./: .gitignore  LICENSE  README.md  agent_comms.py  install.sh  pyproject.toml  registry.example.json
.github/workflows/: ci.yml
docs/: README.md  demo.tape  demo_seed.sh
tests/: test_agent_comms.py
